--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.40",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -27,7 +28,8 @@
     "electron-devtools-installer": "^3.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6"
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
+    "vue-cli-plugin-element-plus": "0.0.13"
   },
   "browserslist": [
     "> 1%",
