--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^1.0.2-beta.40",
     "js-md5": "^0.7.3",
     "mitt": "^2.1.0",
+    "moment": "^2.29.1",
     "qs": "^6.10.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
